feat: restructure project (#9)
* refactor: restructure project

* fix: add status when successful
